# game

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cxx  mjhvbjh.kdev4
cmake/: Sanitizers.cmake
header_only_libs/: CMakeLists.txt
header_only_libs/XoShiro/: CMakeLists.txt
src/: CMakeLists.txt  game.cxx  game.hxx  gameConstant.hxx  pointWithHistory.cxx  pointWithHistory.hxx  scopeDuration.hxx  view.cxx  view.hxx
test/: CMakeLists.txt  gameTest.cxx
